--- a/Report/page9.lyx
+++ b/Report/page9.lyx
@@ -76,5 +76,13 @@ Page 9: Comments and conclusion.
 
 \end_layout
 
+\begin_layout Section
+Conclusion
+\end_layout
+
+\begin_layout Standard
+
+\end_layout
+
 \end_body
 \end_document
