Added page 1 stuff.

--- a/Report/page0.lyx
+++ b/Report/page0.lyx
@@ -286,7 +286,14 @@ Common mode output voltage
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Specifications
+Specifications.
+\begin_inset CommandInset label
+LatexCommand label
+name "tab:Specifications."
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
